@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-18T01:00:27Z",
-  "count_outdated" : 124,
-  "uniques_outdated" : 106,
+  "timestamp" : "2025-12-19T01:03:36Z",
+  "count_outdated" : 125,
+  "uniques_outdated" : 107,
   "count" : 129,
   "uniques" : 111,
   "clones" : [
-    {
-      "timestamp": "2025-12-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-07T00:00:00Z",
       "count": 1,
